--- a/lang/fr.json
+++ b/lang/fr.json
@@ -53,7 +53,7 @@
   "Add :name": "Ajouter :name",
   "add a call reason type": "ajouter un type de motif d’appel",
   "Add a contact": "Ajouter un contact",
-  "Add a contact information": "Ajouter une information de contact",
+  "Add a contact information": "Ajouter une coordonnée",
   "Add a date": "Ajouter une date",
   "Add additional security to your account using a security key.": "Ajouter une sécurité supplémentaire à votre compte à l’aide d’une clé de sécurité.",
   "Add additional security to your account using two factor authentication.": "Ajouter une sécurité supplémentaire à votre compte en utilisant l’authentification à deux facteurs.",
@@ -386,7 +386,7 @@
   "Delete a new key": "Supprimer une nouvelle clé",
   "Delete API Token": "Supprimer le jeton API",
   "Delete contact": "Effacer le contact",
-  "Delete contact information": "Supprimer les coordonnées",
+  "Delete contact information": "Supprimer une coordonnée",
   "deleted a contact information": "a supprimé une information de contact",
   "deleted a goal": "a supprimé un objectif",
   "deleted an address": "a supprimé une adresse",
